# BiopharmaAgent

./: .env.example  .gitignore  README.md  compose.yaml  netlify.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  execution_plan.md  production_runbook.md
infra/airflow/: README.md
infra/airflow/dags/: biopharma_fetch_sources.py
infra/minio/: README.md
infra/postgres/: README.md  schema.sql
infra/postgres/migrations/: 0002_source_states.sql
netlify/functions/: api-proxy.js
scripts/: postgres_smoke.py  run_airflow_smoke.sh  run_full_stack_smoke.sh  run_minio_smoke.sh  run_postgres_integration.sh  run_storage_smoke.sh  s3_archive_smoke.py
src/biopharma_agent/: __init__.py  cli.py  config.py  contracts.py  demo.py  sources.py
src/biopharma_agent/agent/: __init__.py  planner.py
src/biopharma_agent/analysis/: __init__.py  json_utils.py  pipeline.py  prompts.py  schemas.py
src/biopharma_agent/analytics/: __init__.py  brief.py  report.py  (+4 more)
tests/: test_airflow_dag.py  test_analytics.py  test_asx_sec_adapters.py  test_cli.py  test_collection.py  test_daily_cycle.py  test_demo.py  test_diagnostics.py  test_feed_collection.py  test_graph_storage.py  test_html_listing.py  test_json_utils.py  test_openai_provider.py  test_ops.py  test_parsing.py  test_pipeline.py  test_planner.py  test_postgres_integration.py  test_postgres_migrations.py  test_postgres_source_state.py  test_quality_gate.py  test_raw_archive.py  test_scheduler.py  test_source_report.py  test_source_state.py  test_storage_repository.py  test_web_api.py  test_workflow.py
(+54 files in other folders)
