[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "biopharma-agent"
version = "0.1.0"
description = "Agent toolkit for biopharma industry and capital market intelligence."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Biopharma Agent Team" }]
dependencies = []

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3"]
s3 = ["boto3>=1.34"]
infra = ["boto3>=1.34", "psycopg[binary]>=3"]
dev = []

[project.scripts]
biopharma-agent = "biopharma_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
biopharma_agent = ["web/static/*.html", "web/static/*.css", "web/static/*.js"]

[tool.ruff]
line-length = 100
target-version = "py310"
